--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
 <body>
     <section class="main">
         <div class="icons"></div>
-
-        <div class="ram">
-        </div>
+        <div class="ram"></div>
     </section>
-
-    <div class="proc">
-    </div>
+    <div class="proc"></div>
     <script src="js/index.js"></script>
 </body>
 
