--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
     <section class="main">
         <div class="icons"></div>
-        <div class="ram"></div>
+        <section>
+            <div class="ram"></div>
+            <div class="stats">
+                <div class="so"><span><b>S.O.</b></span></div>
+                <div class="prog"><span><b>Detalles de programa</b></span></div>
+                <div class="mem"><span><b>Memoria</b></span></div>
+            </div>
+        </section>
     </section>
     <div class="proc"></div>
     <script src="js/index.js"></script>
